implemented more game logic and player movement